<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/inicio_de_sesi_n"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="18sp"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/los_hamana"
        android:layout_gravity="center"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textSize="18sp"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/vienen_juntos"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:layout_marginTop="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:id="@+id/Iniciar"
        android:onClick="Iniciar"/>


</LinearLayout>