<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="110dp">

                <ImageView
                    android:id="@+id/Imagens"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/ic_launcher"
                    android:contentDescription="@string/imagen_de_la_tarjeta" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="55dp"
                    android:text="@string/nombre"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Autor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="55dp"
                    android:text="@string/autor"
                    android:textSize="26sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="65dp"
                android:text="@string/descripci_n"
                android:textSize="26sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>